added things tot he file

--- a/appspec.yml
+++ b/appspec.yml
@@ -2,7 +2,14 @@ version: 0.0
 os: linux
 files:
   - source: /index.html
-    destination: /var/www/html/
+    destination: /var/www/html/build
+    permissions:
+      - object: /var/www/default/build
+        pattern: "**"
+        owner: ubuntu
+        group: ubuntu
+        mode: 755
+  hooks:
   BeforeInstall:
     - location: deploy/scripts/install_dependencies.sh
       timeout: 300
